@@ -155,7 +155,7 @@ namespace bt
 	
 	bool TorrentControl::updateNeeded() const
 	{
-		return stats.running || moving_files || prealloc_thread || dcheck_thread || stats.completed != cman->completed();
+		return stats.running;
 	}
 
 	void TorrentControl::update()
@@ -1525,6 +1525,7 @@ namespace bt
 			lst->stop();
 		}
 		
+		bool completed = stats.completed;
 		if (lst && !lst->isStopped())
 		{
 			downloader->dataChecked(dc->getResult());
@@ -1534,8 +1535,7 @@ namespace bt
 			{
 				downloader->recalcDownloaded();
 				stats.imported_bytes = downloader->bytesDownloaded();
-				if (cman->haveAllChunks())
-					stats.completed = true;
+				stats.completed = cman->completed();
 			}
 			else
 			{
@@ -1545,8 +1545,7 @@ namespace bt
 				if (stats.bytes_downloaded > downloaded)
 					stats.imported_bytes = stats.bytes_downloaded - downloaded;
 				 
-				if (cman->haveAllChunks())
-					stats.completed = true;
+				stats.completed = cman->completed();
 			}
 		}
 			
@@ -1560,6 +1559,14 @@ namespace bt
 			lst->finished();
 		
 		dataCheckFinished();
+	
+		if (stats.completed != completed)
+		{
+			// Tell QM to redo queue 
+			// seeder might have become downloader, so 
+			// queue might need to be redone
+			updateQueue();
+		}
 	}
 	
 	bool TorrentControl::isCheckingData(bool & finished) const
