@@ -28,6 +28,7 @@ Changes in 3.2.1 :
 - Backport fix for displaying song information not working properly 
 - Fix bug causing url requester in fileselect dialog not to allow you to select directories on windows (185739)
 - Don't throw away model of FileView, when switching torrents (186031)
+- Fix bug causing infinite emission of the stoppedByError signal when corrupted chunks are found in a not started completed torrent
 
 Changes in 3.2 :
 - Use QDir to create directories, avoids nested event loops, which seems to be buggy in some situations (182327)
